python-defaults (2.6.5-4) UNRELEASED; urgency=low

  [ Piotr Ożarowski ]
  * dh_python2: fix parsing "XS-Python-Version: X.Y"
  * Add python-minimal.{postinst,prerm} files to handle .py files
    byte-compilation

  [ Scott Kitterman ]
  * Additonal Python 3 related policy changes:
    - Clarify that helper specific policy does not apply to Python 3
    - Define policy for expressing Python and Python 3 versions in
      XS-Python-Version

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 20 Jun 2010 16:13:24 -0400

python-defaults (2.6.5-3) unstable; urgency=low

  * Remove '-V' option from pyclean call in runtime.d/public_modules.rtremove
  * Add ${misc:Depends} to Depends in all binary packages
  * Add Vcs-Browser field
  * Add some lintian overrides (for false positives)
    - bump minimum required debhelper version to 6.0.7 (due to dh_lintian)

 -- Piotr Ożarowski <piotr@debian.org>  Fri, 18 Jun 2010 10:25:59 +0200

python-defaults (2.6.5-2) unstable; urgency=low

  [ Piotr Ożarowski ]
  * dh_python2:
    - create extension symlinks in /usr/lib/pyshared/pythonX.Y
    - add support for debian/pydist-overrides
    - add dh sequence file (use "--with python2" in debian/rules)
    - some bugs fixed
    - moved from python-dev to python package
  * Support for Python3 removed in dh_python2, pycompile and pyclean
    (moved to python3-defaults) 
  * debian/copyright: Add a note about dh_python2, pycompile, pyclean and
    the debpython package.
  * Add myself to Uploaders

  [ Scott Kitterman ]
  * debian/pyversions.py: Exclude python3 versions from results - those are
    handled by py3versions in python3-defaults
  * Update debian/copyright from LICENSE in python2.6 (Closes: #446671)
  * Update debian/python-policy.sgml to cover py3versions, py(3)versions as
    the only defined interface for determining supported/default python
    versions in Debian, and run time separation of python and python3 as two
    distinct systems